added contact bar

--- a/fr-portfolio.html
+++ b/fr-portfolio.html
@@ -8,6 +8,7 @@
 	<header class="navbar">
 		<a href="#portfolio"> Portfolio </a>
 		<a href="#about"> About </a>
+		<a href="#contact"> Contact </a>
 	</header>
 	<section class="welcome-banner" style="background-image: url(https://images.pexels.com/photos/2132171/pexels-photo-2132171.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);">
 							<h1>Freddie's Portfolio </h1>
@@ -49,7 +50,13 @@
 			</div>		
 	</section>
 	<section class="contact">
-		<p> </p>
+		<h2> Contact Me </h2>
+			<div class="my-contacts">
+				<div>email</div>
+				<div>Socials</div>
+				<div>Socials</div>
+				<div>Socials</div>			
+			</div>
 	</section>					
 	
 
