added background image to CSS

--- a/fr-portfolio.html
+++ b/fr-portfolio.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="tet/css" href="normalize.css">
+	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="portfolio.css">
 </head>
 <body>	
 	<header class="navbar">
-		<a href="#portfolio"> Portfolio </a>
-		<a href="#about"> About </a>
-		<a href="#contact"> Contact </a>
+		<a href="#portfolio">Portfolio</a>
+		<a href="#about">About</a>
+		<a href="#contact">Contact</a>
 	</header>
-	<section class="welcome-banner" style="background-image: url(https://images.pexels.com/photos/2132171/pexels-photo-2132171.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);">
-							<h1>Freddie's Portfolio </h1>
+	<section class="welcome-banner" >
+							<h1>Freddie's Portfolio</h1>
 										
 	</section>	
 	<section class="about">
@@ -21,17 +21,17 @@
 					<img src="https://via.placeholder.com/350x200">
 				</div>
 				<div>
-					<p> Hi this is where I should put some information about myself </p>
+					<p>Hi this is where I should put some information about myself</p>
 				</div>
 			</div>		
 	</section>
 		
 	<section >
-		<h2> Portfolio </h2>
+		<h2>Portfolio</h2>
 			<div class="portfolio-container">
 				<div>
 					<img src="https://via.placeholder.com/350x200">
-					<p> This is where my project information will go</p>
+					<p>This is where my project information will go</p>
 				</div>
 				<div>
 					<img src="https://via.placeholder.com/350x200">
@@ -50,7 +50,7 @@
 			</div>		
 	</section>
 	<section class="contact">
-		<h2> Contact Me </h2>
+		<h2>Contact Me</h2>
 			<div class="my-contacts">
 				<div>email</div>
 				<div>Socials</div>
