--- a/fr-portfolio.html
+++ b/fr-portfolio.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="portfolio.css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>	
 	<header class="navbar">
@@ -52,10 +53,20 @@
 	<section class="contact">
 		<h2>Contact Me</h2>
 			<div class="my-contacts">
-				<div>email</div>
-				<div>Socials</div>
-				<div>Socials</div>
-				<div>Socials</div>			
+				<div>
+					<h3>email</h3>
+					<i class="fas fa-at"></i>
+				</div>
+				<div>
+					<h3>LinkedIn</h3>
+					<i class="fab fa-linkedin"></i>
+
+				</div>
+				<div>
+					<h3>Github</h3>
+					<i class="fab fa-github"></i>
+				</div>
+							
 			</div>
 	</section>					
 	
