--- a/fr-portfolio.html
+++ b/fr-portfolio.html
@@ -15,7 +15,7 @@
 							<h1>Freddie's Portfolio</h1>
 										
 	</section>	
-	<section class="about">
+	<section id="about" class="about-alt">
 		<h2> About me </h2>
 			<div class="about-me">
 				<div>
@@ -27,7 +27,7 @@
 			</div>		
 	</section>
 		
-	<section >
+	<section id="portfolio" class="projects">
 		<h2>Portfolio</h2>
 			<div class="portfolio-container">
 				<div>
@@ -50,11 +50,11 @@
 				</div>
 			</div>		
 	</section>
-	<section class="contact">
-		<h2>Contact Me</h2>
+	<section id="contact" class="contact-me">
+		<h2>Contact</h2>
 			<div class="my-contacts">
 				<div>
-					<h3>email</h3>
+					<h3>Email</h3>
 					<i class="fas fa-at"></i>
 				</div>
 				<div>
