--- a/fr-portfolio.html
+++ b/fr-portfolio.html
@@ -14,64 +14,60 @@
    <a href="#contact">Contact</a>
   </nav>
 	
-  <section class="welcome-banner" >
+  <section class="welcome-banner" > 
    <h1>Freddie's Portfolio</h1>
-  </section>	
+  </section>	<!--.welcome-banner -->
 	
   <article id="about" class="about-alt">
 	<h2> About me </h2>
-		<div class="about-me-container">
-			<figure>
-				<img src="https://via.placeholder.com/350x200">
-			</figure>
-			<div>
-				<p>Hi this is where I should put some information about myself</p>
-			</div>
-		</div>		
-  </article>
+	<figure class="about-me-container">
+	  <img src="https://via.placeholder.com/350x200" alt="gray square as placeholder">
+	  <p>Hi this is where I should put some information about myself</p>
+	</figure>	<!--.about-me-container -->	
+  </article> <!--#about --> <!--.about-alt -->
 		
-  <section id="portfolio" class="projects">
+  <section id="portfolio" class="projects"> 
    <h2>Portfolio</h2>
-   <div class="portfolio-container"> <!-- Portfolio container left hand start -->
+   <div class="portfolio-container"> 
      <figure>
-		<img src="https://via.placeholder.com/350x200">
-		<figcaption>This is where my project information will go</figcaption>
+		<img src="https://via.placeholder.com/350x200" alt="gray square as placeholder">
+		<p>This is where my project information will go</p>
 	 </figure>
 	 <figure>
-		<img src="https://via.placeholder.com/350x200">
-		<figcaption>This is where my project information will go </figcaption>
+		<img src="https://via.placeholder.com/350x200"  alt="gray square as placeholder">
+		<p>This is where my project information will go </p>
 	 </figure>	
-	 </div>  <!-- Portfolio container left hand end -->
-	<div class="portfolio-container">	<!-- Portfolio container right hand start -->
+	</div>  <!--.portfolio-container -->
+	<div class="portfolio-container">	
 	 <figure>
-		<img src="https://via.placeholder.com/350x200">
-		<figcaption>This is where my project information will go</figcaption>
+		<img src="https://via.placeholder.com/350x200"  alt="gray square as placeholder">
+		<p>This is where my project information will go</p>
 	 </figure>	
 	 <figure>
-		<img src="https://via.placeholder.com/350x200">
-		<figcaption>This is where my project information will go</figcaption>
+		<img src="https://via.placeholder.com/350x200"  alt="gray square as placeholder">
+		<p>This is where my project information will go</p>
 	 </figure>
-	</div>	<!-- Portfolio container right hand end -->	
-  </section>
-	
-  <footer id="contact" class="contact-me">
+	</div>	<!--.portfolio-container -->
+   </section> <!--.projects --> <!--#portfolio -->
+  
+  <section>
+   <footer id="contact" class="contact-me">
 	<h2>Contact</h2>
 	<div class="my-contacts">
-		<div>
-			<h3>Email</h3>
-			<i class="fas fa-at"></i>
-		</div>
-		<div>
-			<h3>LinkedIn</h3>
-			<i class="fab fa-linkedin"></i>
+	 <div>
+		<h3>Email</h3>
+		<i class="fas fa-at"></i>
+	 </div>
+	 <div>
+		<h3>LinkedIn</h3>
+		<i class="fab fa-linkedin"></i>
 
-		</div>
-		<div>
-			<h3>Github</h3>
-			<i class="fab fa-github"></i>
-		</div>
-							
-	</footer>
+	 </div>
+	 <div>
+		<h3>Github</h3>
+		<i class="fab fa-github"></i>
+	</div> <!--.my-contacts -->
+   </footer> <!--#contact --> <!--.contact-me -->
   </section>					
  </main>
 
