fixed missing div tag

--- a/fr-portfolio.html
+++ b/fr-portfolio.html
@@ -61,11 +61,11 @@
 	 <div>
 		<h3>LinkedIn</h3>
 		<i class="fab fa-linkedin"></i>
-
 	 </div>
 	 <div>
 		<h3>Github</h3>
 		<i class="fab fa-github"></i>
+	 </div>	
 	</div> <!--.my-contacts -->
    </footer> <!--#contact --> <!--.contact-me -->
   </section>					
