--- a/fr-portfolio.html
+++ b/fr-portfolio.html
@@ -36,7 +36,7 @@
      <img src="https://via.placeholder.com/350x200" alt="gray square as placeholder">
      <p>This is where my project information will go</p>
     </figure>
-   </div>
+   </div> <!--.portfolio-container -->
    <div class="portfolio-container">
     <figure>
      <img src="https://via.placeholder.com/350x200"  alt="gray square as placeholder">
@@ -48,7 +48,7 @@
      <img src="https://via.placeholder.com/350x200"  alt="gray square as placeholder">
      <p>This is where my project information will go This is where my project information will go This is where my project information will go</p>
     </figure>
-   </div>
+   </div> <!--.portfolio-container -->
    <div class="portfolio-container">	 	
     <figure>
      <img src="https://via.placeholder.com/350x200"  alt="gray square as placeholder">
