--- a/fr-portfolio.html
+++ b/fr-portfolio.html
@@ -62,15 +62,21 @@
    <div class="my-contacts">
     <div>
      <h3>Email</h3>
-     <i class="fas fa-at"></i>
+	 <a href="#">
+      <i class="fas fa-at"></i>
+	 </a> 
     </div>
     <div>
      <h3>LinkedIn</h3>
-     <i class="fab fa-linkedin"></i>
+	 <a href="#">
+      <i class="fab fa-linkedin"></i>
+	 </a> 
     </div>
     <div>
      <h3>Github</h3>
-     <i class="fab fa-github"></i>
+	 <a href="#">
+      <i class="fab fa-github"></i>
+     </a>
     </div>	
    </div> <!--.my-contacts -->
   </footer> <!--#contact --> <!--.contact-me -->					
