update name of html file to index

--- a/index.html
+++ b/index.html
@@ -34,13 +34,18 @@
         <div class="portfolio-container">
             <figure>
                 <img src="https://via.placeholder.com/350x200" alt="gray square as placeholder">
-                <p>This is where my project information will go</p>
+                <p>We created a webpage using PHP and HTML that displayed a list of free games and information about the
+                    games. We got data from a free games API using cURL and inserted it into a SQL database. We then
+                    built an OOP application architecture following the SOLID principles to display this data to a
+                    page.</p>
             </figure>
         </div> <!--.portfolio-container -->
         <div class="portfolio-container">
             <figure>
                 <img src="https://via.placeholder.com/350x200" alt="gray square as placeholder">
-                <p>This is where my project information will go </p>
+                <p>Working with an existing RESTful API, we added new features and fixed bugs on the iO academy aptitude
+                    test. We used TypeScript for type safety in our new code. Using SCSS and JS we added dynamic
+                    colouring to a test result accordion. The SCSS was compiled using gulp. </p>
             </figure>
         </div>  <!--.portfolio-container -->
         <div class="portfolio-container">
@@ -56,6 +61,13 @@
                 <p>This is where my project information will go</p>
             </figure>
         </div>    <!--.portfolio-container -->
+        </div> <!--.portfolio-container -->
+        <div class="portfolio-container">
+            <figure>
+                <img src="https://via.placeholder.com/350x200" alt="gray square as placeholder">
+                <p>This is where my project information will go</p>
+            </figure>
+        </div>
     </section> <!--.projects --> <!--#portfolio -->
 
     <footer id="contact" class="contact-me">
