--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>Portfolio</h2>
         <div class="portfolio-container">
             <figure>
-                <img src="https://via.placeholder.com/350x200" alt="gray square as placeholder">
+                <img src="images/games-listing.png" alt="gray square as placeholder">
                 <p>We created a webpage using PHP and HTML that displayed a list of free games and information about the
                     games. We got data from a free games API using cURL and inserted it into a SQL database. We then
                     built an OOP application architecture following the SOLID principles to display this data to a
@@ -42,7 +42,7 @@
         </div> <!--.portfolio-container -->
         <div class="portfolio-container">
             <figure>
-                <img src="https://via.placeholder.com/350x200" alt="gray square as placeholder">
+                <img src="images/aptitude-test.png" alt="gray square as placeholder">
                 <p>Working with an existing RESTful API, we added new features and fixed bugs on the iO academy aptitude
                     test. We used TypeScript for type safety in our new code. Using SCSS and JS we added dynamic
                     colouring to a test result accordion. The SCSS was compiled using gulp. </p>
@@ -74,19 +74,17 @@
         <h2>Contact</h2>
         <div class="my-contacts">
             <div>
-                <a href="#">
-                    <h3>Email</h3>
-                    <i class="fas fa-at"></i>
-                </a>
+                <a href="mailto:fredreschwamm@outlook.com"><h3>Email</h3>
+                    <i class="fas fa-at"></i></a>
             </div>
             <div>
-                <a href="www.linkedin.com/in/frederick-reschwamm">
+                <a href="https://www.linkedin.com/in/frederick-reschwamm">
                     <h3>LinkedIn</h3>
                     <i class="fab fa-linkedin"></i>
                 </a>
             </div>
             <div>
-                <a href="#">
+                <a href="https://github.com/Freschwamm">
                     <h3>Github</h3>
                     <i class="fab fa-github"></i>
                 </a>
