updated all pages

--- a/about-me.html
+++ b/about-me.html
@@ -7,26 +7,28 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     <title>Title</title>
 </head>
 <body>
+<div class="topnav">
+    <a href="index.html">Freddie Reschwamm</a>
+    <div class="topnav-right">
+        <a href="index.html">Home</a>
+        <a href="Contact.html">Contact</a>
+        <a href="portfolio.html">Portfolio</a>
+    </div>
+</div>
 <article class="about-alt">
     <h2> About me </h2>
     <figure class="about-me-container">
-        <img src="images/myself.jpg" alt="gray square as placeholder">
-        <div class="about-me-information">
-            <div class="skew-square">
-                <p>I am a software developer - We created a webpage using PHP and HTML that displayed a list of free
-                    games and information about the
-                    games. We got data from a free games API using cURL and inserted it into a SQL database. We then
-                    built an OOP application architecture following the SOLID principles to display this data to a
-                    page.</p>
-            </div>
-        </div>
+        <img src="images/myself.jpg" alt="freddie speaking with a microphone">
+        <p>Hi there! My name is Freddie, I am passionate about software development with an interest in full stack
+            development.<br><br> In my spare time I enjoy
+            playing rugby and 5-a-side football, as well as outdoor activities such as kayaking. Alongside being active
+            I also enjoy travelling and learning about wine. <br><br>I believe in technology being used to help tackle
+            pressing social and environmental challenges and want to work on projects that aim to deliver positive
+            change.</p>
     </figure>    <!--.about-me-container -->
 </article> <!--#about --> <!--.about-alt -->
 
