--- a/portfolio.html
+++ b/portfolio.html
@@ -7,53 +7,68 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     <title>Title</title>
 </head>
 <body>
+<div class="topnav">
+    <a href="index.html">Freddie Reschwamm</a>
+    <div class="topnav-right">
+        <a href="index.html">Home</a>
+        <a href="about-me.html">About</a>
+        <a href="Contact.html">Contact</a>
+    </div>
+</div>
 <section id="portfolio" class="projects">
-    <h2>Portfolio</h2>
     <div class="portfolio-container">
         <figure>
+            <h3> Free Games Listing Webpage</h3>
             <img src="images/games-listing.png" alt="gray square as placeholder" class="project-thumbnails">
             <p>We created a webpage using PHP and HTML that displayed a list of free games and information about the
                 games. We got data from a free games API using cURL and inserted it into a SQL database. We then
                 built an OOP application architecture following the SOLID principles to display this data to a
                 page.</p>
+            <button><a href="https://github.com/iO-Academy/2021-jul-game-listing">Github repository</a></button>
         </figure>
     </div> <!--.portfolio-container -->
     <div class="portfolio-container">
         <figure>
+            <h3> iO Academy Aptitude Test</h3>
             <img src="images/aptitude-test.png" alt="gray square as placeholder" class="project-thumbnails">
             <p>Working with an existing RESTful API, we added new features and fixed bugs on the iO academy aptitude
                 test. We used TypeScript for type safety in our new code. Using SCSS and JS we added dynamic
                 colouring to a test result accordion. The SCSS was compiled using gulp. </p>
+            <button><a href="https://github.com/iO-Academy/aptitude-test">Github repository</a></button>
         </figure>
     </div>  <!--.portfolio-container -->
     <div class="portfolio-container">
         <figure>
-            <img src="https://via.placeholder.com/350x200" alt="gray square as placeholder"
+            <h3>Movie Quiz Game</h3>
+            <img src="images/movie-quiz.png" alt="movie quiz thumbnail"
                  class="project-thumbnails">
             <p>This is where my project information will go This is where my project information will go This is
                 where my project information will go</p>
+            <button><a href="https://github.com/iO-Academy/2021-mongooses-guess-the-film">Github repository</a></button>
         </figure>
     </div> <!--.portfolio-container -->
     <div class="portfolio-container">
         <figure>
-            <img src="https://via.placeholder.com/350x200" alt="gray square as placeholder"
+            <h3>Collectors App</h3>
+            <img src="images/collectors-app.png" alt="collectors app thumbnail"
                  class="project-thumbnails">
             <p>This is where my project information will go</p>
+            <button><a href="https://github.com/Freschwamm/collectors-app">Github repository</a></button>
         </figure>
     </div>    <!--.portfolio-container -->
     </div> <!--.portfolio-container -->
     <div class="portfolio-container">
         <figure>
-            <img src="https://via.placeholder.com/350x200" alt="gray square as placeholder"
+            <h3>IP Address Tracker</h3>
+            <img src="images/ip-address-tracker.png" alt="IP address tracker thumbnail"
                  class="project-thumbnails">
-            <p>This is where my project information will go</p>
+            <p>I made a search tool that when given an IP address will find and return the location on a
+                map. I used Javascript to pull data from two API's using fetch requests  </p>
+            <button><a href="https://github.com/Freschwamm/ip-address-tracker">Github repository</a></button>
         </figure>
     </div>
 </section> <!--.projects --> <!--#portfolio -->
