--- a/Contact.html
+++ b/Contact.html
@@ -7,23 +7,18 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     <title>Title</title>
 </head>
 <body>
-
 <div class="topnav">
-    <a href="index.html">Freddie Reschwamm</a>
+    <a href="index.html" class="brand">Freddie Reschwamm</a>
     <div class="topnav-right">
         <a href="index.html">Home</a>
         <a href="about-me.html">About</a>
         <a href="portfolio.html">Portfolio</a>
     </div>
 </div>
-
 <article>
     <div class="my-contacts">
         <div class="icon-container">
@@ -44,7 +39,5 @@
         </div>
     </div>
 </article>
-
-
 </body>
 </html>
