up to date portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
-    <title>Title</title>
+    <title>Portfolio</title>
 </head>
 <body>
 <div class="topnav">
@@ -46,8 +46,10 @@
             <h3>Movie Quiz Game</h3>
             <img src="images/movie-quiz.png" alt="movie quiz thumbnail"
                  class="project-thumbnails">
-            <p>This is where my project information will go This is where my project information will go This is
-                where my project information will go</p>
+            <p>We created a Movie Quiz game where you have to guess the title based on a quote. The game was built in
+                Javascript, we fetched JSON data to fill the quote’s, title and hints. Data was turned into arrays so we
+                could easily manipulate it. Using validation, mapping and filtering we prevented duplication of
+                questions and hints. </p>
             <button><a href="https://github.com/iO-Academy/2021-mongooses-guess-the-film">Github repository</a></button>
         </figure>
     </div> <!--.portfolio-container -->
@@ -56,7 +58,11 @@
             <h3>Collectors App</h3>
             <img src="images/collectors-app.png" alt="collectors app thumbnail"
                  class="project-thumbnails">
-            <p>This is where my project information will go</p>
+            <p>I made a collectors app where you display pokemon cards and information about them. I set up an SQL
+                database
+                to hold the collectors data. I used PDO request’s in PHP to insert data into the database or to select
+                data to be shown on the homepage. I ran unit tests to reduce the chance of bugs if I were to develop
+                this webpage further. It was styled in CSS.</p>
             <button><a href="https://github.com/Freschwamm/collectors-app">Github repository</a></button>
         </figure>
     </div>    <!--.portfolio-container -->
@@ -66,8 +72,10 @@
             <h3>IP Address Tracker</h3>
             <img src="images/ip-address-tracker.png" alt="IP address tracker thumbnail"
                  class="project-thumbnails">
-            <p>I made a search tool that when given an IP address will find and return the location on a
-                map. I used Javascript to pull data from two API's using fetch requests  </p>
+            <p>I made a search tool that when given an IP address will find and return the location on a map. I used a
+                JS fetch request to pull data from an IP Geolocation API, and integrated it into an open-source map API.
+                REGEX validation was used to prevent incorrect IP addresses being added. I used postman to check the
+                format the data would be sent in.</p>
             <button><a href="https://github.com/Freschwamm/ip-address-tracker">Github repository</a></button>
         </figure>
     </div>
