--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="about-me.html">About</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
                 </ul>
             </h1>
         </div>
