--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="portfolio.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
     <div class="my-contacts">
         <div class="icon-container">
             <a href="mailto:fredreschwamm@outlook.com"><h3>Email</h3>
-                <i class="fas fa-at"></i></a>
+                <i class="fab fa-at"></i></a>
         </div>
         <div class="icon-container">
             <a href="https://www.linkedin.com/in/frederick-reschwamm">
